[gd_scene load_steps=2 format=3 uid="uid://dxaeakdou4gy7"]

[ext_resource type="Script" path="res://player_gui.gd" id="1_xxs7n"]

[node name="PlayerGUI" type="CanvasLayer"]
script = ExtResource("1_xxs7n")

[node name="GunName" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 71.0
grow_vertical = 0
size_flags_horizontal = 4
text = "Handgun"

[node name="GunAmmo" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 88.0
offset_top = -23.0
offset_right = 159.0
grow_vertical = 0
size_flags_horizontal = 4
text = "10/10"

[node name="GunMagazines" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 152.0
offset_top = -23.0
offset_right = 223.0
grow_vertical = 0
size_flags_horizontal = 4
text = "5/5"
